# AstroCrawl

./: .codespellrc  .env.example  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
astrobasis/: README.md  SECURITY.md  pyproject.toml
astrobasis/astrobasis/: __init__.py  _atomic.py  _json_compat.py  _logging.py  _version.py
astrobasis/tests/: test_atomic.py  test_json_compat.py  test_logfmt.py  test_logging.py  test_types.py
astrocrawl/: MANIFEST.in  README.md  __init__.py  __main__.py  _constants.py  _json_compat.py  _retry_strategy.py  _startup.py  _types.py  _version.py  config.py  diagnostics.py  health.py  health_monitor.py  main.py  pyproject.toml  resilience.py
astrocrawl/ai/: _client.py  _config.py  _errors.py  _observability.py  _profile.py  _provider.py  _provider_registry.py  _rate_limiter.py
astrocrawl/ai/providers/: __init__.py  anthropic.py  google.py  openai.py
astrocrawl/astrocrawl/: _constants.py  _packaged.py  _path_strategy.py  _startup.py  _types.py  _version.py  astroframe-plugin.json  config.py  diagnostics.py  health_monitor.py  main.py  resilience.py
astrocrawl/astrocrawl/ai/: __init__.py  _client.py  _config.py  _constraint.py  _observability.py  _provider_registry.py  _types.py  _usage_tracker.py
astrocrawl/astrocrawl/ai/providers/: google.py  (+2 more)
astrocrawl/astrocrawl/browser/: __init__.py  _device_caps.py  _preview.py  _slot_pool.py  browser_pool.py  context_pool.py  page_pool.py
astrocrawl/astrocrawl/cli/: _i18n.py  main.py
astrocrawl/astrocrawl/crawler/: engine.py  liveness.py  progress.py  signals.py  supervisors.py
astrocrawl/astrocrawl/gui/: _ai_profile_page.py  _animated_bar.py  _i18n.py  _log_bridge.py  _preview_panel.py  _preview_session.py  _proxy_profile_page.py  _tokens.py  advanced_dialog.py  crawl_session.py  main_window.py  rules_dialog.py  theme_dialog.py  title_bar.py
astrocrawl/astrocrawl/network/: __init__.py  _fetch.py  robots.py  sitemap.py  throttling.py
astrocrawl/astrocrawl/proxy/: _hook.py  _probe.py  _proxy.py  _session.py
astrocrawl/astrocrawl/rules/: _ai.py  _chatml.py  _extractor.py  _html_preprocess.py  _io.py  _lifecycle.py  _loader.py  _markdown.py  _matcher.py  _schema.py  _source.py  _state.py  _template.py  _transform.py
astrocrawl/astrocrawl/storage/: db.py  writer.py
astrocrawl/astrocrawl/utils/: __init__.py  preferences.py  url.py
astrocrawl/browser/: _domain_memory.py  _preview.py  _preview_inject.js  _retry.py  _slot_pool.py  browser_pool.py  context_pool.py  navigation.py  page_pool.py
astrocrawl/cli/: __init__.py  _i18n.py  main.py
astrocrawl/crawler/: __init__.py  _url_gate.py  engine.py  outcomes.py  supervisors.py
astrocrawl/gui/: _ai_profile_page.py  _delegates.py  _i18n.py  _log_bridge.py  _preview_panel.py  _preview_session.py  _proxy_endpoint_dialog.py  _proxy_profile_page.py  _route_settings_page.py  _style.py  _table_page.py  advanced_dialog.py  completion_dialog.py  crawl_session.py  main_window.py  proxy_health_bar.py  rules_dialog.py  theme.py  thread.py  worker_status_bar.py
astrocrawl/gui/translations/: astrocrawl_gui_zh_CN.ts
astrocrawl/network/: _fetch.py  robots.py  sitemap.py  throttling.py
astrocrawl/proxy/: __init__.py  _config.py  _consumers.py  _hook.py  _probe.py  _proxy.py  _session.py
astrocrawl/rules/: __init__.py  _ai.py  _chatml.py  _extractor.py  _html_preprocess.py  _io.py  _lifecycle.py  _loader.py  _matcher.py  _prompt_template_position.txt  _prompt_template_type.txt  _schema.py  _source.py  _state.py  _template.py  _transform.py
astrocrawl/storage/: __init__.py  _protocol.py  db.py  writer.py
astrocrawl/tests/: conftest.py  test_ai_client.py  test_ai_errors.py  test_ai_generation.py  test_ai_provider.py  test_ai_rate_limiter.py  test_browser_context_pool.py  test_browser_domain_memory.py  test_browser_navigation.py  test_browser_page_pool.py  test_browser_slot_pool.py  test_cli_proxy.py  test_cli_rules.py  test_cli_source.py  test_config.py  test_constants.py  test_db.py  test_db_expanded.py  test_engine.py  test_gui_ai_profile.py  test_gui_animated_bar.py  test_gui_core.py  test_gui_delegates.py  test_gui_mainwindow_behavior.py  test_gui_mainwindow_data.py  test_gui_rules_dialog.py  test_gui_table_page.py  test_gui_theme.py  test_gui_tokens.py  test_html.py  test_logging.py  test_packaged.py  test_proxy.py  test_retry_strategy.py  test_rules_engine.py  test_rules_lifecycle.py  test_rules_loader.py  test_rules_markdown.py  test_rules_source.py  test_signals.py  (+8 more)
astrocrawl/tests/ai_google/: test_client.py
astrocrawl/tests/ai_openai/: test_client.py
astrocrawl/tests/browser/: test_preview.py
astrocrawl/tests/gui/: test_preview_panel.py
astrocrawl/utils/: __init__.py  _atomic.py  html.py  logging.py  preferences.py
astroflow/: README.md  SECURITY.md  pyproject.toml
astroflow/astroflow/: __init__.py  _version.py
astroflow/tests/: __init__.py
astroforum/: README.md  SECURITY.md  pyproject.toml
astroforum/astroforum/: __init__.py  _version.py
astroforum/tests/: test_version.py
astroframe/: MANIFEST.in  README.md  SECURITY.md  pyproject.toml
astroframe/astroframe/: __init__.py  _errors.py  _host.py  _lifecycle.py  _loader.py  _registry.py  _sandbox.py  _scanner.py  _schema_validator.py  _signature.py  _state.py  _types.py  _version.py
astroframe/astroframe/entitlements/: macos_debug.plist
astroframe/tests/: _fakes_plugin.py  test_plugin_error_isolation.py  test_plugin_host.py  test_plugin_lifecycle.py  test_plugin_loader.py  test_plugin_registry.py  test_plugin_sandbox.py  test_plugin_scanner.py  test_plugin_schema_validator.py  test_plugin_signature.py  test_plugin_state.py
astroproject/: MANIFEST.in  README.md  SECURITY.md  pyproject.toml
astroproject/astroproject/: __init__.py  _version.py
astrostaff/: README.md  SECURITY.md  pyproject.toml
astrostaff/astrostaff/: __init__.py  _version.py
astrostaff/tests/: test_version.py
astrovault/: README.md  SECURITY.md  pyproject.toml
astrovault/astrovault/: __init__.py  _version.py
astrovault/tests/: test_version.py
(+128 files in other folders)
