[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astrocrawl"
dynamic = ["version"]
description = "Async web crawler powered by Playwright headless Chromium — JavaScript rendering, AI-powered extraction (OpenAI / Anthropic / Google), CSS rule engine with visual preview, and a full PySide6 desktop GUI. SQLite WAL crash recovery, proxy circuit breaker, RFC 9309 robots.txt, ReDoS-immune regex, 3,822 tests. pip install astrocrawl[full,gui,fast]."
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Etoileint", email = "etoileint@163.com"},
    {name = "Etoileint", email = "littlestar@buaa.edu.cn"},
]
keywords = [
    "web-crawler",
    "web-scraping",
    "python",
    "playwright",
    "async",
    "chromium",
    "headless",
    "ai",
    "openai",
    "anthropic",
    "scraping",
    "extraction",
    "css-selectors",
    "pyside6",
    "gui",
    "proxy",
    "structured-data",
    "robots-txt",
    "sitemap",
    "crawler",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
requires-python = ">=3.12"

dependencies = [
    "astrobasis>=0.1",
    "aiohttp>=3.9",
    "aiosqlite>=0.19",
    "beautifulsoup4>=4.12",
    "cssselect>=1.2",
    "google-re2>=0.1",
    "jsonschema>=4.0",
    "lxml>=4.9",
    "playwright>=1.40",
    "publicsuffixlist",
    "pydantic>=2.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.39"]
google = ["google-genai>=1.0"]
full = ["openai>=1.0", "anthropic>=0.39", "google-genai>=1.0"]
gui = ["PySide6>=6.5"]
fast = [
    "orjson>=3.8",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.20,<2.0",
    "ruff>=0.15,<1.0",
]
yaml = ["pyyaml>=6.0"]
monitor = ["psutil>=5.9"]

[project.scripts]
astrocrawl = "astrocrawl.main:main"

[project.urls]
Homepage = "https://github.com/Etoileint/AstroProject"
Repository = "https://github.com/Etoileint/AstroProject"
Issues = "https://github.com/Etoileint/AstroProject/issues"
Documentation = "https://github.com/Etoileint/AstroProject#readme"

[project.entry-points."astrocrawl.ai.providers"]
openai = "astrocrawl.ai.providers.openai:create_provider"
anthropic = "astrocrawl.ai.providers.anthropic:create_provider"
google = "astrocrawl.ai.providers.google:create_provider"

[project.entry-points."astroframe.plugins"]
astrocrawl = "astrocrawl"

[tool.setuptools.packages.find]
include = ["astrocrawl*"]

[tool.setuptools.package-data]
astrocrawl = [
    "rules/*.json",
    "rules/*.txt",
    "browser/*.js",
    "gui/translations/*.qm",
    "gui/translations/*.ts",
    "_assets/*",
    "astroframe-plugin.json",
]

[tool.setuptools.dynamic]
version = {attr = "astrocrawl._version.__version__"}

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
